horizontal scroll fixed

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -74,7 +74,6 @@ h2 a img:hover{
     nav {
         display: flex;
         flex-direction: column;
-        /* border-bottom: var(--rose) solid 2px; */
     }
     h2 {
         display: flex;
@@ -98,16 +97,16 @@ h2 a img:hover{
     ul {
         background-color: white;
         box-shadow: none;
-        flex-wrap: wrap;
-
+        width: 100%;
+        margin: 0;
+        padding: 1rem 0;
+        border-radius: 0;
         justify-content: space-evenly;
     }
 
     ul a {
-        /* margin: 1rem;
-        border: 2px solid var(--rose);
-        border-radius: 0.25rem;
-        padding: 0.5rem; */
+        margin: 0;
+        padding: 0;
     }
 
     .sep {
